src/BadLang/Tests/BadC.Tests/tests/failing/ParseException/RecursiveNestedStructure1.basm

.code code code_raw BadC
{
	struct Test : export
	{
		Test Inner;
	}

	void __main__() : export
	{
		Test test;
		halt;
	}

}